# PedicleScrewSimulator

./: CMakeLists.txt  PedicleScrewPlanner.py  PedicleScrewSimulator.py  PedicleScrewSimulator_v3.py  README.md
.history/PedicleScrewSimulatorWizard/: DefineROIStep_20210415100828.py  DefineROIStep_20210415100830.py  DefineROIStep_20210415100839.py  DefineROIStep_20210415100840.py  DefineROIStep_20210415100900.py  DefineROIStep_20210415100901.py  DefineROIStep_20210415100911.py  DefineROIStep_20210415100914.py  DefineROIStep_20210415100917.py  DefineROIStep_20210415100935.py  DefineROIStep_20210415100938.py  DefineROIStep_20210415100941.py  DefineROIStep_20210415100944.py  DefineROIStep_20210415100946.py  DefineROIStep_20210415100948.py  DefineROIStep_20210415101020.py  DefineROIStep_20210415101022.py  DefineROIStep_20210415101024.py  DefineROIStep_20210415101027.py  DefineROIStep_20210415101132.py  DefineROIStep_20210415101133.py  DefineROIStep_20210415101137.py  DefineROIStep_20210415101140.py  DefineROIStep_20210415101144.py  DefineROIStep_20210415101155.py  DefineROIStep_20210415101156.py  DefineROIStep_20210415101200.py  DefineROIStep_20210415101202.py  DefineROIStep_20210415101221.py  DefineROIStep_20210415101225.py  DefineROIStep_20210415101227.py  DefineROIStep_20210415101231.py  DefineROIStep_20210415101233.py  DefineROIStep_20210415101235.py  DefineROIStep_20210415101244.py  DefineROIStep_20210415101246.py  DefineROIStep_20210415101302.py  DefineROIStep_20210415104812.py  DefineROIStep_20210415104816.py  DefineROIStep_20210415104818.py  (+116 more)
PedicleScrewPlannerWizard/: PlanningGradeStep.py  PlanningLandmarksStep.py  PlanningMeasurementsStep.py  __init__.py
PedicleScrewSimulator/: CMakeLists.txt  PedicleScrewSimulator.py
PedicleScrewSimulator/PedicleScrewSimulatorWizard/: DefineROIStep.py  EndStep.py  GradeStep.py  Helper.py  LandmarksStep.py  LoadDataStep.py  MeasurementsStep.py  PedicleScrewSimulatorStep.py  ScrewStep.py  __init__.py
PedicleScrewSimulator/Resources/ScrewModels/: scaled_475x30.vtk  scaled_475x35.vtk  scaled_475x40.vtk  scaled_550x30.vtk  scaled_625x35.vtk  scaled_625x40.vtk  scaled_700x35.vtk  scaled_700x45.vtk  scaled_700x50.vtk  screw head.vtk
PedicleScrewSimulatorWizard/: DefineROIStep.py  GradeStep.py  Helper.py  LandmarksStep.py  LoadDataStep.py  MeasurementsStep.py  PedicleScrewSimulatorStep.py  __init__.py  git.ignore  utilslicer.py  xyzguide_2021-03-26-Cop.ipynb
PedicleScrewSimulatorWizard/.history/: DefineROIStep_20210415113938.py  DefineROIStep_20210415114040.py  DefineROIStep_20210415114436.py  DefineROIStep_20210415114523.py  LandmarksStep_20210408202445.py  LandmarksStep_20210415120444.py  LandmarksStep_20210415120448.py  LandmarksStep_20210415120454.py  LoadDataStep_20210415101708.py  landmark_20210415120326.py  landmark_20210415120510.py  landmark_20210415120518.py  landmark_20210415120533.py  landmark_20210415120543.py  landmark_20210415121002.py  landmark_20210415121006.py  landmark_20210415121012.py  landmark_20210415121014.py  landmark_20210415121241.py  landmark_20210415121249.py  landmark_20210415121251.py  landmark_20210415121448.py  landmark_20210415121451.py  landmark_20210415121452.py  landmark_20210415121457.py  landmark_20210415121506.py  landmark_20210415121532.py  landmark_20210415121534.py  landmark_20210415121550.py  landmark_20210415121616.py  landmark_20210415121746.py  landmark_20210415121749.py  landmark_20210415121815.py  landmark_20210415121819.py  landmark_20210415121838.py  landmark_20210415121923.py  landmark_20210415121927.py  landmark_20210415122035.py
PedicleScrewSimulatorWizard_v3/: DefineROIStep.py  GradeStep.py  LandmarksStep.py  LoadDataStep.py  MeasurementsStep.py  PedicleScrewSimulatorStep.py  ScrewStep.py  __init__.py
PedicleScrewSimulatorWizard_v3/screws/: scaled_475x45.vtk  scaled_550x40.vtk  scaled_550x45.vtk  scaled_625x45.vtk  scaled_625x50.vtk  scaled_700x40.vtk  screw head.vtk
Resources/ScrewModels/: scaled_475x30.vtk  scaled_475x35.vtk  scaled_475x45.vtk  scaled_550x30.vtk  scaled_550x40.vtk  scaled_550x45.vtk  scaled_625x35.vtk  scaled_625x40.vtk  scaled_625x45.vtk  scaled_625x50.vtk  scaled_700x40.vtk  scaled_700x50.vtk
